MARP-2960 Handle Feedbacks